--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -9,7 +9,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter="res://assets/resources/intro_text.txt"
 exclude_filter=""
-export_path="../../FNFgnd.exe"
+export_path="../../FNFg.exe"
 encryption_include_filters=""
 encryption_exclude_filters=""
 encrypt_pck=false
